# code_challenge_revela

./: LICENSE  Makefile  README.md
.github/workflows/: integration.yml  production.yml  staging.yml
app/module_a/: README.md  docker-compose.yaml  main.py
app/module_b/: README.md  main.py  pyproject.toml
app/module_c/: Dockerfile  README.md  main.py
app/module_c/src/: two_sum.py
infrastructure/: README.md  ec2.tf  main.tf  variables.tf  vpc.tf
infrastructure/environments/dev/: backend.tfvars
infrastructure/environments/production/: backend.tfvars
infrastructure/environments/staging/: backend.tfvars
module_a/: Makefile  main.py
module_a/tests/unit/: test_fib.py
module_b/: main.py
module_b/src/: factorial.py
